# boids

./: .gitignore  Cargo.toml  README.md  build.sh  dev.sh  index.html  index.ts  install.sh  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  projectPost.mdx  rust-toolchain.toml  start.js  tsconfig.json  turbo.json  webpack.config.js
.github/workflows/: webpack.yml
js-only/: package.json  tsconfig.json
js-only/src/: main.ts
jsOnly/: index.html
jsOnly/src/: main.ts
no-workers/: build.sh  package.json  style.css
no-workers/src/: lib.rs
src/: Boid.rs  initialize.rs  lib.rs
static/: worker.js
ts/: index.ts
versions/js-only/: index.html  package.json  pnpm-lock.yaml
versions/js-only/src/: main.ts
versions/no-workers/: Cargo.toml  build.sh  index.html  package.json  pnpm-lock.yaml  start.js  webpack.config.js
versions/no-workers/src/: Boid.rs  Vector3.rs
versions/no-workers/static/: no-workers.html
versions/no-workers/ts/: changeBox.ts  index.ts
versions/rust-workers/: Cargo.toml  build.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  webpack.config.js
versions/rust-workers/rs/: Cargo.toml
versions/rust-workers/rs/src/: Vector3.rs  lib.rs
versions/rust-workers/src/: Boid.rs  initialize.rs  lib.rs
versions/rust-workers/static/: 404.html  index.html  worker.ts
versions/rust-workers/ts/: boid.ts  boids.ts  index.ts  initWorkers.ts  main.ts  setup.ts  worker.ts
