[package]
name = "boids_wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O3']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_derive = "1.0.137"
js-sys = "0.3.57"
console_error_panic_hook = "0.1.7"
[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Worker',
]